classDiagram
  class User {
    - UUID id
    - str first_name
    - str last_name
    - str email
    - str password
    - bool is_admin
    - datetime created_at
    - datetime updated_at
    + register()
    + update_profile()
    + delete()
  }

  class Place {
    - UUID id
    - str title
    - str description
    - float price
    - float latitude
    - float longitude
    - datetime created_at
    - datetime updated_at
    + create()
    + update()
    + delete()
    + list()
  }

  class Review {
    - UUID id
    - int rating
    - str comment
    - datetime created_at
    - datetime updated_at
    + create()
    + update()
    + delete()
    + list()
  }

  class Amenity {
    - UUID id
    - str name
    - str description
    - datetime created_at
    - datetime updated_at
    + create()
    + update()
    + delete()
    + list()
  }

  User "1" --> "0..*" Place : owns
  User "1" --> "0..*" Review : writes
  Place "1" --> "0..*" Review : has
  Place "1..*" -- "0..*" Amenity : has
